--- a/composer.json
+++ b/composer.json
@@ -6,8 +6,10 @@
     "type": "project",
     "require": {
         "php": ">=7.0.0",
+        "activismebe/database-layering": "^0.29.0",
         "activismebe/laravel-form-helpers": "^1.2",
         "fideloper/proxy": "~3.3",
+        "laracasts/flash": "^3.0",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0"
     },
